WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
187928
WebFullScreenManagerProxy does not need to be ref counted
https://bugs.webkit.org/show_bug.cgi?id=187928
Summary
WebFullScreenManagerProxy does not need to be ref counted
Chris Dumez
Reported
2018-07-23 14:54:49 PDT
WebFullScreenManagerProxy does not need to be ref counted, it is owned by WebPageProxy.
Attachments
Patch
(13.42 KB, patch)
2018-07-23 15:04 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2018-07-23 15:04:31 PDT
Created
attachment 345613
[details]
Patch
Eric Carlson
Comment 2
2018-07-24 05:54:31 PDT
Comment on
attachment 345613
[details]
Patch Nice cleanup, thank you!
WebKit Commit Bot
Comment 3
2018-07-24 06:22:10 PDT
Comment on
attachment 345613
[details]
Patch Clearing flags on attachment: 345613 Committed
r234143
: <
https://trac.webkit.org/changeset/234143
>
WebKit Commit Bot
Comment 4
2018-07-24 06:22:11 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2018-07-24 06:23:45 PDT
<
rdar://problem/42539293
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug