Source/WebKit/UIProcess/WebFullScreenManagerProxy.cpp
@@ -41,64 +41,61 @@ using namespace WebCore;
 
 namespace WebKit {
 
-Ref<WebFullScreenManagerProxy> WebFullScreenManagerProxy::create(WebPageProxy& page, WebFullScreenManagerProxyClient& client)
-{
-    return adoptRef(*new WebFullScreenManagerProxy(page, client));
-}
-
 WebFullScreenManagerProxy::WebFullScreenManagerProxy(WebPageProxy& page, WebFullScreenManagerProxyClient& client)
-    : m_page(&page)
-    , m_client(&client)
+    : m_page(page)
+    , m_client(client)
 {
-    m_page->process().addMessageReceiver(Messages::WebFullScreenManagerProxy::messageReceiverName(), m_page->pageID(), *this);
+    m_page.process().addMessageReceiver(Messages::WebFullScreenManagerProxy::messageReceiverName(), m_page.pageID(), *this);
 }
 
 WebFullScreenManagerProxy::~WebFullScreenManagerProxy()
 {
+    m_page.process().removeMessageReceiver(Messages::WebFullScreenManagerProxy::messageReceiverName(), m_page.pageID());
+    m_client.closeFullScreenManager();
 }
 
 void WebFullScreenManagerProxy::willEnterFullScreen()
 {
-    m_page->fullscreenClient().willEnterFullscreen(m_page);
-    m_page->process().send(Messages::WebFullScreenManager::WillEnterFullScreen(), m_page->pageID());
+    m_page.fullscreenClient().willEnterFullscreen(&m_page);
+    m_page.process().send(Messages::WebFullScreenManager::WillEnterFullScreen(), m_page.pageID());
 }
 
 void WebFullScreenManagerProxy::didEnterFullScreen()
 {
-    m_page->fullscreenClient().didEnterFullscreen(m_page);
-    m_page->process().send(Messages::WebFullScreenManager::DidEnterFullScreen(), m_page->pageID());
+    m_page.fullscreenClient().didEnterFullscreen(&m_page);
+    m_page.process().send(Messages::WebFullScreenManager::DidEnterFullScreen(), m_page.pageID());
 
-    if (m_page->isControlledByAutomation()) {
-        if (WebAutomationSession* automationSession = m_page->process().processPool().automationSession())
-            automationSession->didEnterFullScreenForPage(*m_page);
+    if (m_page.isControlledByAutomation()) {
+        if (WebAutomationSession* automationSession = m_page.process().processPool().automationSession())
+            automationSession->didEnterFullScreenForPage(m_page);
     }
 }
 
 void WebFullScreenManagerProxy::willExitFullScreen()
 {
-    m_page->fullscreenClient().willExitFullscreen(m_page);
-    m_page->process().send(Messages::WebFullScreenManager::WillExitFullScreen(), m_page->pageID());
+    m_page.fullscreenClient().willExitFullscreen(&m_page);
+    m_page.process().send(Messages::WebFullScreenManager::WillExitFullScreen(), m_page.pageID());
 }
 
 void WebFullScreenManagerProxy::didExitFullScreen()
 {
-    m_page->fullscreenClient().didExitFullscreen(m_page);
-    m_page->process().send(Messages::WebFullScreenManager::DidExitFullScreen(), m_page->pageID());
+    m_page.fullscreenClient().didExitFullscreen(&m_page);
+    m_page.process().send(Messages::WebFullScreenManager::DidExitFullScreen(), m_page.pageID());
     
-    if (m_page->isControlledByAutomation()) {
-        if (WebAutomationSession* automationSession = m_page->process().processPool().automationSession())
-            automationSession->didExitFullScreenForPage(*m_page);
+    if (m_page.isControlledByAutomation()) {
+        if (WebAutomationSession* automationSession = m_page.process().processPool().automationSession())
+            automationSession->didExitFullScreenForPage(m_page);
     }
 }
 
 void WebFullScreenManagerProxy::setAnimatingFullScreen(bool animating)
 {
-    m_page->process().send(Messages::WebFullScreenManager::SetAnimatingFullScreen(animating), m_page->pageID());
+    m_page.process().send(Messages::WebFullScreenManager::SetAnimatingFullScreen(animating), m_page.pageID());
 }
 
 void WebFullScreenManagerProxy::requestExitFullScreen()
 {
-    m_page->process().send(Messages::WebFullScreenManager::RequestExitFullScreen(), m_page->pageID());
+    m_page.process().send(Messages::WebFullScreenManager::RequestExitFullScreen(), m_page.pageID());
 }
 
 void WebFullScreenManagerProxy::supportsFullScreen(bool withKeyboard, bool& supports)
@@ -112,80 +109,57 @@ void WebFullScreenManagerProxy::supportsFullScreen(bool withKeyboard, bool& supp
 
 void WebFullScreenManagerProxy::saveScrollPosition()
 {
-    m_page->process().send(Messages::WebFullScreenManager::SaveScrollPosition(), m_page->pageID());
+    m_page.process().send(Messages::WebFullScreenManager::SaveScrollPosition(), m_page.pageID());
 }
 
 void WebFullScreenManagerProxy::restoreScrollPosition()
 {
-    m_page->process().send(Messages::WebFullScreenManager::RestoreScrollPosition(), m_page->pageID());
+    m_page.process().send(Messages::WebFullScreenManager::RestoreScrollPosition(), m_page.pageID());
 }
 
 void WebFullScreenManagerProxy::setFullscreenInsets(const WebCore::FloatBoxExtent& insets)
 {
-    m_page->process().send(Messages::WebFullScreenManager::SetFullscreenInsets(insets), m_page->pageID());
+    m_page.process().send(Messages::WebFullScreenManager::SetFullscreenInsets(insets), m_page.pageID());
 }
 
 void WebFullScreenManagerProxy::setFullscreenAutoHideDuration(Seconds duration)
 {
-    m_page->process().send(Messages::WebFullScreenManager::SetFullscreenAutoHideDuration(duration), m_page->pageID());
+    m_page.process().send(Messages::WebFullScreenManager::SetFullscreenAutoHideDuration(duration), m_page.pageID());
 }
 
 void WebFullScreenManagerProxy::setFullscreenControlsHidden(bool hidden)
 {
-    m_page->process().send(Messages::WebFullScreenManager::SetFullscreenControlsHidden(hidden), m_page->pageID());
-}
-
-void WebFullScreenManagerProxy::invalidate()
-{
-    m_page->process().removeMessageReceiver(Messages::WebFullScreenManagerProxy::messageReceiverName(), m_page->pageID());
-
-    if (!m_client)
-        return;
-
-    m_client->closeFullScreenManager();
-    m_client = nullptr;
+    m_page.process().send(Messages::WebFullScreenManager::SetFullscreenControlsHidden(hidden), m_page.pageID());
 }
 
 void WebFullScreenManagerProxy::close()
 {
-    if (!m_client)
-        return;
-    m_client->closeFullScreenManager();
+    m_client.closeFullScreenManager();
 }
 
 bool WebFullScreenManagerProxy::isFullScreen()
 {
-    if (!m_client)
-        return false;
-    return m_client->isFullScreen();
+    return m_client.isFullScreen();
 }
 
 void WebFullScreenManagerProxy::enterFullScreen()
 {
-    if (!m_client)
-        return;
-    m_client->enterFullScreen();
+    m_client.enterFullScreen();
 }
 
 void WebFullScreenManagerProxy::exitFullScreen()
 {
-    if (!m_client)
-        return;
-    m_client->exitFullScreen();
+    m_client.exitFullScreen();
 }
     
 void WebFullScreenManagerProxy::beganEnterFullScreen(const IntRect& initialFrame, const IntRect& finalFrame)
 {
-    if (!m_client)
-        return;
-    m_client->beganEnterFullScreen(initialFrame, finalFrame);
+    m_client.beganEnterFullScreen(initialFrame, finalFrame);
 }
 
 void WebFullScreenManagerProxy::beganExitFullScreen(const IntRect& initialFrame, const IntRect& finalFrame)
 {
-    if (!m_client)
-        return;
-    m_client->beganExitFullScreen(initialFrame, finalFrame);
+    m_client.beganExitFullScreen(initialFrame, finalFrame);
 }
 
 } // namespace WebKit
